[project]
name = 'mnv4'
version = '0.1.0'
requires-python = '>=3.9,<3.10'

dependencies = [
    'onnx==1.13',
    'onnxoptimizer==0.3.13',
    'onnxruntime==1.18',
    'matplotlib==3.5.1',
    'numpy==1.23.0',
    'opencv-contrib-python==4.7.0.72',
    'opencv-python==4.7.0.72',
    'openpyxl==3.1.2',
    'pandas==1.5.3',
    'pillow==9.3.0',
    'plotly==5.14.1',
    'scikit-learn==1.3.0',
    'tensorboardx==2.6.2.2',
    'timm==1.0.11',
    'torch==2.0.1',
    'torchaudio==2.0.2',
    'torchinfo==1.7.2',
    'torchvision==0.15.2',
    'transformers==4.28.1',
    'seaborn==0.13.2',
    'safetensors==0.4.5',
    'terminaltables==3.1.10',
    "tensorboard>=2.20.0",
]
